<resources>
	<string name="app_name">Drive</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="unable_to_get_file_details">Unable to get file details</string>
	<string name="unable_to_get_folder_details">Unable to get folder details</string>
	<string name="modified_title">Modified:</string>
	<string name="confirm">Confirm</string>
	<string name="cancel">Cancel</string>
	<string name="edit">Edit</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="no_content">No items</string>
	<string name="profile">Profile</string>
	<string name="confirm_cancel_edit_title">Cancel Edit</string>
	<string name="confirm_cancel_edit_message">Are you sure you want to cancel changes made?</string>
	<string name="action_profile">Profile</string>
	<string name="action_logout">Logout</string>
	<string name="action_gridview">Grid View</string>
	<string name="action_search">Search</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="confirm_delete_title">Confirm Delete</string>
	<string name="confirm_delete_file_message">Are you sure you want to delete this file?</string>
	<string name="confirm_delete_folder_message">Are you sure you want to delete this folder and all of its contents?</string>
	<string name="delete_file_notification">File successfully deleted</string>
	<string name="delete_folder_notification">Folder successfully deleted</string>
	<string name="details">Details</string>
	<string name="implement_later">Telmediq will implement later</string>

	<string name="unable_to_create_file">Unable to create file</string>
	<string name="no_camera">Device does not have a camera</string>
	<string name="denied_access_to_external_storage">You do not have permission to access external storage</string>
	<string name="denied_access_to_camera">You do not have permission to access device camera</string>


</resources>
