<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_gridview"
		android:title="@string/action_gridview"
		app:materialIcon="view_grid"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_search"
		android:title="@string/action_search"
		app:materialIcon="magnify"
		app:showAsAction="always|collapseActionView"
		app:actionViewClass="android.support.v7.widget.SearchView"/>

	<item
		android:id="@+id/action_profile"
		android:title="@string/action_profile"
		app:materialIcon="face_profile"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_settings"
		android:title="@string/action_settings"
		app:materialIcon="settings"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_logout"
		android:title="@string/action_logout"
		app:materialIcon="logout"
		app:showAsAction="never"/>
</menu>