<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">


    <TextView
        android:id="@+id/profile_firstNameLabel"
        android:labelFor="@+id/profile_editTextFirstName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/profile_firstName"
        android:layout_below="@+id/profile_firstNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/profile_editTextFirstName"
        android:layout_below="@+id/profile_firstNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="18sp"
        android:visibility="gone"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/profile_lastNameLabel"
        android:labelFor="@+id/profile_editTextLastName"
        android:layout_below="@+id/profile_firstNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="45dp"/>

    <TextView
        android:id="@+id/profile_lastName"
        android:layout_below="@+id/profile_lastNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/profile_editTextLastName"
        android:layout_below="@+id/profile_lastNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="18sp"
        android:visibility="gone"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/profile_emailTitle"
        android:layout_below="@+id/profile_lastNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="45dp"/>

    <TextView
        android:id="@+id/profile_email"
        android:layout_below="@+id/profile_emailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18sp" />

    <!--- Stretch Goal Maybe?
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>-->

    <Button
        android:id="@+id/profile_editButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"/>

    <Button
        android:id="@+id/profile_cancelButton"
        android:layout_toStartOf="@+id/profile_confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:visibility="gone"/>

    <Button
        android:id="@+id/profile_confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:visibility="gone"/>
</RelativeLayout>